--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/Code-Creator-man/web-demo/issues"
   },
-  "homepage": "https://github.com/Code-Creator-man/web-demo#readme"
+  "homepage": "https://github.com/Code-Creator-man/web-demo#readme",
+  "description": ""
 }
